Fix icon size on mobile view and increase image resolution

--- a/website/styles/styles.scss
+++ b/website/styles/styles.scss
@@ -252,6 +252,7 @@ body {
 			}
 
 			& > img {
+				width: 501px;
 				@media only screen and (max-width: 767px) {
 					max-width: 200px;
 					max-height: 200px;
@@ -299,8 +300,8 @@ body {
 				margin-left: 0px;
 			}
 			& a > img {
-				width: 100%;
-				height: 100%;
+				width: 30px;
+				height: 30px;
 			}
 		}
 	}
